--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="example/css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
           rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
           rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="example/font-awesome/css/font-awesome.min.css" type="text/css">
 
@@ -26,10 +26,10 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="example/css/creative.css" type="text/css">
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
 
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta https-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tips & Tricks: How to spice up your menu with CSS3"/>
     <meta name="keywords" content="menu, hover, css3, effect, slide out, image, transition"/>
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="example/css/demo.css"/>
     <link rel="stylesheet" type="text/css" href="example/css/style.css"/>
-    <link href='http://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'/>
 
     <style>
 
@@ -73,8 +73,8 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="httpss://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="httpss://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 </head>
@@ -189,7 +189,7 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="http://www.imdb.com/name/nm0000217/" class="portfolio-box">
+                <a href="https://www.imdb.com/name/nm0000217/" class="portfolio-box">
                     <img src="example/images/APRESENTAÇÃO-06.png" class="img-responsive" alt="">
 
                     <div class="portfolio-box-caption">
@@ -202,7 +202,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="http://www.imdb.com/name/nm0001053/" class="portfolio-box">
+                <a href="https://www.imdb.com/name/nm0001053/" class="portfolio-box">
                     <img src="example/images/APRESENTAÇÃO-02.png" class="img-responsive" alt="">
 
                     <div class="portfolio-box-caption">
@@ -228,7 +228,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="http://www.imdb.com/name/nm0000040/" class="portfolio-box">
+                <a href="https://www.imdb.com/name/nm0000040/" class="portfolio-box">
                     <img src="example/images/APRESENTAÇÃO-04.png" class="img-responsive" alt="">
 
                     <div class="portfolio-box-caption">
@@ -241,7 +241,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="http://www.imdb.com/name/nm0000264/" class="portfolio-box">
+                <a href="https://www.imdb.com/name/nm0000264/" class="portfolio-box">
                     <img src="example/images/APRESENTAÇÃO-05.png" class="img-responsive" alt="">
 
                     <div class="portfolio-box-caption">
@@ -255,7 +255,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="http://www.imdb.com/name/nm0000095/" class="portfolio-box">
+                <a href="https://www.imdb.com/name/nm0000095/" class="portfolio-box">
                     <img src="example/images/APRESENTAÇÃO-07.png" class="img-responsive" alt="">
 
                     <div class="portfolio-box-caption">
@@ -419,8 +419,8 @@
 
 
 <!-- jQuery -->
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
 <script src="example/js/bootstrap.min.js"></script>
