fixing director.html

--- a/director.html
+++ b/director.html
@@ -144,9 +144,9 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="example/js/creative.js"></script>
-<script src="httpss://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 <link href="example/css/nv.d3.css" rel="stylesheet" type="text/css">
-<script src="httpss://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js" charset="utf-8"></script>
 <script src="example/js/nv.d3.js"></script>
 <script type="text/javascript" src="example/js/regression.js"></script>
 <script type="text/javascript" src="diretor.js"></script>
